# clashgpt

./: .gitignore  Makefile  README.md  docker-compose.yml  download_card_images.py  todo.md
clashgpt/: Dockerfile  GEMINI.md  Makefile  README.md  download_card_images.py  evaluate_rag.py  package-lock.json  populate_db.py  pyproject.toml  top_decks.py
clashgpt/app/: agent.py  cache.py  fast_api_app.py  guardrails.py  prompt.py  rate_limit.py  settings.py
clashgpt/app/app_utils/: clerk_auth.py  telemetry.py  typing.py
clashgpt/app/clash_royale/: clash_royale.py  models.py
clashgpt/app/models/: models.py
clashgpt/app/routers/: api.py  deck_analysis.py  decks.py  global_tournament.py  profiles.py
clashgpt/app/services/: clash_royale.py  database.py  database_decks.py  (+2 more)
frontend/: README.md  lint_output.txt  package-lock.json  package.json  proxy.ts  tsconfig.json
frontend/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/components/: app-sidebar.tsx  auth-gate-dialog.tsx  battle-log.tsx  card-icon.tsx  card-selector.tsx  card-stats.tsx  chat-sidebar.tsx  clan-info.tsx  clan-search-results.tsx  deck-builder-hitl.tsx  deck-card.tsx  deck-display.tsx  deck-grid-card.tsx  deck-grid.tsx  deck-matchup-results.tsx  deck-search-results.tsx  knowledge-search.tsx  leaderboard.tsx  mode-toggle.tsx  navbar.tsx  player-profile.tsx  win-condition-matchup.tsx
frontend/lib/: tournament-config.ts  types.ts
frontend/types/: deck.ts
memory/: MEMORY.md
rag/: pyproject.toml  settings.py  test_config.py
rag/ingestion/: chunker.py  embedder.py  ingest.py
(+60 files in other folders)
